feat(pwa): Make framed installable offline

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   <title>Framed</title>
   <meta
     name="description"
-    content="Create stunning layouts of two pictures with customizable backgrounds, borders, and orientations. Free online picture framing tool."
+    content="Create stunning layouts of two pictures with customizable backgrounds, borders, and orientations."
   >
 
-  <!-- Favicon (placeholder) -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#1f2937">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Framed">
 </head>
 <body>
   <div id="app"></div>
