chore(icons): New svg icons, new style

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   >
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
+  <link rel="shortcut icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
 
   <!-- PWA Manifest -->
   <link rel="manifest" href="/manifest.json">
