chore(readme): Update documentation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Framed</title>
   <meta
     name="description"
-    content="Create stunning layouts of two pictures with customizable backgrounds, borders, and orientations."
+    content="Frame two pictures together with customizable orientation, aspect ratio, borders, and background color."
   >
 
   <!-- Favicon -->
