--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   >
 
   <!-- Favicon -->
-  <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
-  <link rel="shortcut icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
+  <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg" />
+  <link rel="icon" type="image/png" href="/favicons/favicon-96x96.png" sizes="96x96" />
+  <link rel="shortcut icon" href="/favicons/favicon.ico" />
+  <link rel="apple-touch-icon" href="/favicons/apple-touch-icon.png" sizes="180x180" />
 
   <!-- PWA Manifest -->
   <link rel="manifest" href="/manifest.json">
